[package]
name = "kubectl-dask-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Jon Velando <rigzba21>"]
license-file = "LICENSE"
respository = "https://github.com/rigzba21/kubectl-dask-gateway"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.70.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
kube-client = "0.70.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
serde_yaml =  "0.8.21"
schemars = "0.8.6"
dialoguer = "0.10.0"
